--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,11 +10,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@mui/material": "^7.3.7",
     "@tailwindcss/vite": "^4.1.18",
+    "axios": "^1.13.2",
     "firebase": "^12.8.0",
+    "lucide-react": "^0.562.0",
     "phosphor-react": "^1.4.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-hook-form": "^7.71.1",
     "react-router-dom": "^7.12.0",
     "tailwindcss": "^4.1.18",
     "zustand": "^5.0.10"
