--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,9 +13,11 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
     "@mui/material": "^7.3.7",
+    "@mui/x-charts": "^8.26.0",
     "@tailwindcss/vite": "^4.1.18",
     "axios": "^1.13.2",
     "firebase": "^12.8.0",
+    "gsap": "^3.14.2",
     "lucide-react": "^0.562.0",
     "phosphor-react": "^1.4.1",
     "react": "^19.1.1",
